# codex-monitor

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
.workflow/codex-control-bridge-mvp-implementation/: final-report.md  orchestration.md  plan.md  state.json
.workflow/codex-control-bridge-mvp-implementation/packets/: P1.md  P10.md  P2.md  P4.md  P6.md
.workflow/codex-control-bridge-mvp-implementation/results/: P1.md  P10.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8.md  P9.md
.workflow/codex-monitor-mvp-implementation/: final-report.md  orchestration.md  plan.md  state.json
.workflow/codex-monitor-mvp-implementation/packets/: P1.md  P10.md  P3.md  P5.md  P7.md  P8.md  P9.md
.workflow/codex-monitor-mvp-implementation/results/: P1.md  P10.md  P2.md  P6.md  P7.md  P8.md  P9.md
.workflow/codex-monitor-project-analysis/: final-report.md  orchestration.md  plan.md  state.json
.workflow/codex-monitor-project-analysis/packets/: P1.md  P2.md  P3.md  P4.md
.workflow/codex-monitor-project-analysis/results/: P1.md  P2.md  P3.md  P4.md
.workflow/remote-control-completion/: final-report.md  orchestration.md  plan.md  state.json
.workflow/remote-control-completion/packets/: P1-discovery.md  P2-implementation.md  P3-tests-docs.md  P4-verification.md
.workflow/remote-control-completion/results/: P1-discovery.md  P2-implementation.md  P3-tests-docs.md  P4-verification.md
docs/superpowers/plans/: 2026-06-20-codex-control-bridge-mvp.md  2026-06-20-codex-monitor-mvp.md  2026-06-22-codex-monitor-core-adapters.md  2026-06-24-prebuilt-release-binaries.md  2026-07-10-codex-cli-runtime-isolation.md  2026-07-10-codex-monitor-reconnect-steer.md  2026-07-10-codex-monitor-update-command.md  2026-07-10-dynamic-endpoint-drift-guard.md  2026-07-10-native-app-monitor-shortcuts.md  2026-07-10-stdio-app-monitor-bridge.md  2026-07-10-windows-app-bridge-integrity-ab.md  2026-07-10-windows-codex-app-shared-server.md  2026-07-10-windows-codex-app-target.md  2026-07-11-macos-update.md  2026-07-11-single-binary-cli.md  2026-07-13-app-stop-hook-monitor.md
docs/superpowers/specs/: 2026-06-20-codex-control-bridge-design.md  2026-06-20-codex-monitor-design.md  2026-07-10-codex-cli-runtime-isolation-design.md  2026-07-10-codex-monitor-reconnect-steer-design.md  2026-07-10-codex-monitor-update-command-design.md  2026-07-10-native-app-heartbeat-design.md  2026-07-10-stdio-app-monitor-bridge-design.md  2026-07-10-windows-app-bridge-integrity-ab-design.md  2026-07-10-windows-codex-app-shared-server-design.md  2026-07-11-macos-update-design.md  2026-07-11-single-binary-cli-design.md  2026-07-13-app-stop-hook-monitor-design.md
skills/codex-monitor/: SKILL.md
skills/codex-monitor/agents/: openai.yaml
skills/codex-monitor/references/: codex-monitor-operations.md
skills/codex-monitor/scripts/: cdxm-agmsg-apply.sh  cdxm-agmsg-foreground.sh  cdxm-context.sh  codex-shim.sh
src/: app_bridge.rs  app_hook.rs  cli.rs  client.rs  delivery.rs  launchd.rs  lib.rs  main.rs  protocol.rs  remote_control.rs  state.rs  target.rs  update.rs
src/app_bridge/: monitor_router.rs  stdio_monitor.rs
src/sources/: agmsg.rs  mod.rs
src/transport/: memory.rs  mod.rs  stdio.rs  unix.rs  ws.rs
src/update/: apply.rs  archive.rs  macos.rs  model.rs  windows.rs
tests/: agmsg_adapter.rs  app_bridge.rs  app_hook_cli.rs  cli_contract.rs  fake_app_server.rs  installer_contract.rs  release_workflow_contract.rs  shim_resolution.rs  windows_installer_contract.rs
