[package]
name = "codex-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local-first monitor for delivering external events into Codex app-server."

[lib]
name = "codex_monitor"
path = "src/lib.rs"

[[bin]]
name = "codex-monitor"
path = "src/main.rs"

[[bin]]
name = "cdxm"
path = "src/bin/cdxm.rs"

[[bin]]
name = "cdxm-codex-app-bridge"
path = "src/bin/cdxm-codex-app-bridge.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
futures-util = "0.3.32"
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
# rusqlite 0.40.x pulls libsqlite3-sys 0.38.x, whose build.rs uses the
# `cfg_select!` std macro stabilized only in Rust 1.95. Pin to 0.39.x
# (libsqlite3-sys 0.37.x) so the bundled SQLite build works on the broader
# range of stable toolchains we target on Windows native installs.
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.8"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.27.0"
